templates/sys-info-web-env-view-server_template.yaml
---
# Source: sys-info-web-env-view-server/templates/env-view-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: env-view-server-service
spec:
  type: ClusterIP
  selector:
    app: env-view-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
# Source: sys-info-web-env-view-server/templates/sys-info-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sys-info-web-service
spec:
  type: ClusterIP
  selector:
    app: sys-info-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
# Source: sys-info-web-env-view-server/templates/env-view-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: env-view-server-deployment
  labels:
    app: env-view-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: env-view-server
  template:
    metadata:
      labels:
        app: env-view-server
    spec:
      containers:
        - name: env-view-server
          image: huajuan6848/env-view-server:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
---
# Source: sys-info-web-env-view-server/templates/sys-info-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sys-info-web-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sys-info-web
  template:
    metadata:
      labels:
        app:  sys-info-web
    spec:
      containers:
      - name: sys-info-web
        image: huajuan6848/sys-info-web:0.0.2-SNAPSHOT-HEALTH
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
---
# Source: sys-info-web-env-view-server/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sys-info-web-env-view-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /sys-info-web(/|$)(.*) # <-- This is the regex
        backend:
          service:
            name: sys-info-web-service
            port: 
              number: 80
      - pathType: Prefix
        path: /env-view-server(/|$)(.*) # <-- This is the regex
        backend:
          service:
            name: env-view-server-service
            port: 
              number: 80
